# claude-file-recovery

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml
demo/: demo.tape  generate_demo_data.py
src/claude_file_recovery/: __main__.py  cli.py
src/claude_file_recovery/core/: diff.py  filters.py  injection.py  reconstructor.py  scanner.py
src/claude_file_recovery/core/symlinks/: __init__.py  fs_detector.py  merge.py
src/claude_file_recovery/tui/: app.py  file_detail_screen.py  file_list_screen.py  injection_review_screen.py  styles.css  symlink_review_screen.py
src/claude_recovery/: __main__.py  cli.py
src/claude_recovery/core/: diff.py  filters.py  injection.py  models.py  reconstructor.py  scanner.py  timestamps.py
src/claude_recovery/core/symlinks/: __init__.py  fs_detector.py  merge.py  models.py
src/claude_recovery/tui/: app.py  file_detail_screen.py  file_list_screen.py  injection_review_screen.py  output_dir_modal.py  styles.css  symlink_review_screen.py
